# CorpusAnalysis

./: .gitignore  1-sotu-first-look.ipynb  2-dictionary-content.ipynb  3a-collocations-dispersion.ipynb  3b-nietzsche-german-paragraphs.ipynb  CLAUDE.md  LICENSE-CODE.md  LICENSE-CONTENT.md  README.md  TASKS.md  corpus_tools.py  environment.yml  pyproject.toml  test_corpus_tools.py
2025-slides/: MANIFEST.md
day-1/: D1-AM-intro.ipynb  D1-AM-intro.qa.md  D1-AM-intro.slides.html
day-1/dictionaries/: nietzsche.dic
day-2/: D2-AM-demos.ipynb  D2-AM-demos.slides.html  D2-PM-dfm-collocations.ipynb  D2-PM-dfm-collocations.slides.html
day-3/: D3-AM-german-liwc.ipynb
day-3/nietzsche/: 1885 Z.txt
day-4/: D4-AM-corpus-construction.ipynb  D4-AM-corpus-construction.slides.html  D4-PM-brainstorming.ipynb  D4-PM-brainstorming.slides.html
dictionaries/: nuke.dic
nietzsche/: 1880 HH.txt  1888 A.txt
scratch/: 1-sotu-first-look.ipynb  2-dictionary-content.ipynb  3a-collocations-dispersion.ipynb  3b-nietzsche-german-paragraphs.ipynb  _build_1.py  _build_2.py  _build_3a.py  _build_3b.py  corpus_tools.py  test_corpus_tools.py
tools/: code_along_score.py  extract_pptx_images.py  notebook_cells.py  qa-rubric.md  render_palettes_reference.py  render_slides.py  render_stale.py  slides.css  sync_corpus_tools.py  test_notebook_cells.py
